# Aerospace-Group-B-Module-1

./: .gitignore  CMakeLists.txt  Makefile  README.md  comm  comm.cpp  comm_y  comm_y.cpp  conv.sh  gen  genericmpi.cpp  input.in  mpi  mpi.cpp  output.cpp  output1.cpp  test1.in  test2.in
Test/: Conv.cpp  L2Test.cpp  boundaryTest.cpp  c2d.cpp  fTest.cpp  haloTest.cpp  poissonTest.cpp
dependencies/2Decomp_C/: Alloc.cpp  Best2DGrid.cpp  C2Decomp.cpp  C2Decomp.hpp  HALO_TEST  Halo.cpp  IO.cpp  MemSplitMerge.cpp  TEST  TEST_MAJORINDEXING  TransposeX2Y.cpp  TransposeY2X.cpp  TransposeY2Z.cpp  TransposeZ2Y.cpp  real.hpp
doc/: config  doxyfile
doc/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  README_8md.html  annotated.html  annotated_dup.js  boundary_8cpp.html  boundary_8cpp.js  boundary_8cpp_8o_8d.html  boundary_8cpp__incl.map  boundary_8cpp__incl.md5  boundary_8hpp.html  boundary_8hpp.js  boundary_8hpp__dep__incl.map  boundary_8hpp__dep__incl.md5  boundary_8hpp__incl.map  boundary_8hpp__incl.md5  boundary_8hpp_source.html  build-cpuprof_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  build-cpuprof_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.js  build-cpuprof_2CMakeFiles_23_828_83_2CompilerIdC_2CMakeCCompilerId_8c.html  build-cpuprof_2CMakeFiles_23_828_83_2CompilerIdC_2CMakeCCompilerId_8c.js  build-cpuprof_2CMakeFiles_2main_8dir_2src_2boundary_8cpp_8o_8d.html  build-cpuprof_2CMakeFiles_2main_8dir_2src_2core_8cpp_8o_8d.html  build-cpuprof_2CMakeFiles_2main_8dir_2src_2main_8cpp_8o_8d.html  build-memcheck_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  build-memcheck_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.js  build-memcheck_2CMakeFiles_23_828_83_2CompilerIdC_2CMakeCCompilerId_8c.html  build-memcheck_2CMakeFiles_23_828_83_2CompilerIdC_2CMakeCCompilerId_8c.js  build-memcheck_2CMakeFiles_2main_8dir_2src_2boundary_8cpp_8o_8d.html  build-memcheck_2CMakeFiles_2main_8dir_2src_2core_8cpp_8o_8d.html  build-memcheck_2CMakeFiles_2main_8dir_2src_2main_8cpp_8o_8d.html  build-memprof_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  build-memprof_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.js  build-memprof_2CMakeFiles_23_828_83_2CompilerIdC_2CMakeCCompilerId_8c.html  build-memprof_2CMakeFiles_23_828_83_2CompilerIdC_2CMakeCCompilerId_8c.js  build-memprof_2CMakeFiles_2main_8dir_2src_2boundary_8cpp_8o_8d.html  build-memprof_2CMakeFiles_2main_8dir_2src_2core_8cpp_8o_8d.html  build-memprof_2CMakeFiles_2main_8dir_2src_2main_8cpp_8o_8d.html  build_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  build_2CMakeFiles_23_828_83_2CompilerIdC_2CMakeCCompilerId_8c.html  (+240 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  (+44 more)
doc/latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  README_8md.tex  annotated.tex  boundary_8cpp.tex  boundary_8cpp_8o_8d.tex  boundary_8cpp__incl.md5  boundary_8hpp.tex  boundary_8hpp__dep__incl.md5  boundary_8hpp__incl.md5  boundary_8hpp_source.tex  build-cpuprof_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  build-cpuprof_2CMakeFiles_23_828_83_2CompilerIdC_2CMakeCCompilerId_8c.tex  build-cpuprof_2CMakeFiles_2main_8dir_2src_2boundary_8cpp_8o_8d.tex  build-cpuprof_2CMakeFiles_2main_8dir_2src_2core_8cpp_8o_8d.tex  build-cpuprof_2CMakeFiles_2main_8dir_2src_2main_8cpp_8o_8d.tex  build-memcheck_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  build-memcheck_2CMakeFiles_23_828_83_2CompilerIdC_2CMakeCCompilerId_8c.tex  build-memcheck_2CMakeFiles_2main_8dir_2src_2boundary_8cpp_8o_8d.tex  build-memcheck_2CMakeFiles_2main_8dir_2src_2core_8cpp_8o_8d.tex  build-memcheck_2CMakeFiles_2main_8dir_2src_2main_8cpp_8o_8d.tex  build-memprof_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  build-memprof_2CMakeFiles_23_828_83_2CompilerIdC_2CMakeCCompilerId_8c.tex  build-memprof_2CMakeFiles_2main_8dir_2src_2boundary_8cpp_8o_8d.tex  build-memprof_2CMakeFiles_2main_8dir_2src_2core_8cpp_8o_8d.tex  build-memprof_2CMakeFiles_2main_8dir_2src_2main_8cpp_8o_8d.tex  build_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  build_2CMakeFiles_23_828_83_2CompilerIdC_2CMakeCCompilerId_8c.tex  build_2CMakeFiles_2main_8dir_2src_2boundary_8cpp_8o_8d.tex  build_2CMakeFiles_2main_8dir_2src_2core_8cpp_8o_8d.tex  build_2CMakeFiles_2main_8dir_2src_2main_8cpp_8o_8d.tex  classBoundary.tex  classBoundaryFunction.tex  classBoundaryFunction__inherit__graph.md5  classBoundary__coll__graph.md5  classDirichlet.tex  classDirichlet__coll__graph.md5  classDirichlet__inherit__graph.md5  classExactSolution.tex  classFunctionZero.tex  (+96 more)
includes/: boundary.hpp  config.hpp  constants.hpp  core.hpp  grid.hpp  includes.hpp  poissonSolver.hpp  real.hpp  utils.hpp
scripts/: cpu_profile.py  error_plt.py  mem_profile.py  spaceconv.py  vizualisation.py
src/: Prova.cpp  boundary.cpp  constants.cpp  core.cpp  error.cpp  main  main.cpp  newRK.cpp  output.cpp  poissonSolver.cpp  rungeKutta.cpp  setBoundaries.cpp
src/boundary/: boundary.cpp  boundary.hpp
